--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <br/>
 
 
-    <h2 id="#about">About us</h2>
+    <h2 id="about">About us</h2>
     <p>
       Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dignissimos
       sequi quae aperiam est magni iusto, deserunt et libero maxime repellat
@@ -30,7 +30,7 @@
       illo!
     </p>
 
-    <h2 id="#team">Team</h2>
+    <h2 id="team">Team</h2>
     <p>
       Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dignissimos
       sequi quae aperiam est magni iusto, deserunt et libero maxime repellat
@@ -40,7 +40,7 @@
       illo!
     </p>
 
-    <h2 id="#plans">Plans</h2>
+    <h2 id="plans">Plans</h2>
     <p>
       Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dignissimos
       sequi quae aperiam est magni iusto, deserunt et libero maxime repellat
