Списки.Вложенные списки (ол\юл\лишка)

--- a/index.html
+++ b/index.html
@@ -7,6 +7,29 @@
     <title>Document</title>
   </head>
   <body>
+    <ul>
+      <li>Coffee</li>
+      <li>Tea</li>
+      <li>Milk</li>
+    </ul>
+
+    <br />
+
+    <ol>
+      <li>Coffee</li>
+      <li>
+        Tea
+        <ol>
+          <li>Black</li>
+          <li>Green</li>
+          <li>White</li>
+          <li>Flower</li>
+        </ol>
+      </li>
+      <li>Milk</li>
+    </ol>
+
+    <!--
     <h3>List:</h3>
     <a href="#about">1. About us</a>
     <br/>
@@ -69,6 +92,6 @@
       provident ipsum repellat, ex modi illum id quidem molestiae reprehenderit
       illo!
     </p>
-
+     -->
   </body>
 </html>
