--- a/index.html
+++ b/index.html
@@ -7,41 +7,14 @@
     <title>Document</title>
   </head>
   <body>
-    <ul>
-      <li>Coffee</li>
-      <li>Tea</li>
-      <li>Milk</li>
-    </ul>
-
-    <br />
-
-    <ol>
-      <li>Coffee</li>
-      <li>
-        Tea
-        <ol>
-          <li>Black</li>
-          <li>Green</li>
-          <li>White</li>
-          <li>Flower</li>
-        </ol>
-      </li>
-      <li>Milk</li>
+   <ol>
+      Content:
+      <li><a href="#about"> About us</a></li>
+      <li><a href="#team">Team</a></li>
+      <li><a href="#plans"> Plans</a></li>
+      <li><a href="#contacts">Contacts</a></li>
+      <li><a href="#address"> Adress</a></li>
     </ol>
-
-    <!--
-    <h3>List:</h3>
-    <a href="#about">1. About us</a>
-    <br/>
-    <a href="#team">2. Team</a>
-    <br/>
-    <a href="#plans">3. Plans</a>
-    <br/>
-    <a href="#contacts">4. Contacts</a>
-    <br/>
-    <a href="#address">5. Adress</a>
-    <br/>
-
 
     <h2 id="about">About us</h2>
     <p>
@@ -92,6 +65,6 @@
       provident ipsum repellat, ex modi illum id quidem molestiae reprehenderit
       illo!
     </p>
-     -->
+    -->
   </body>
 </html>
