--- a/index.html
+++ b/index.html
@@ -7,6 +7,28 @@
     <title>Document</title>
   </head>
   <body>
+    <p>Lorem ipsum dolor sit amet.</p>
+
+    <p style="color: blue; font-size: 30px; font-style: italic">
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Ex sapiente
+      provident dolores in ea assumenda totam odio omnis amet et.
+    </p>
+   
+
+    <ul style="list-style-type: '\1F60A';">
+      <li>Coffee</li>
+      <li>Tea</li>
+      <li>Milk</li>
+    </ul>
+
+    <ol>
+      <li>Coffee</li>
+      <li>Tea</li>
+      <li>Milk</li>
+    </ol>
+
+
+    <!--
    <ol>
       Content:
       <li><a href="#about"> About us</a></li>
