css правило для tag

--- a/index.html
+++ b/index.html
@@ -4,9 +4,20 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link href="Styles/style.css" rel="stylesheet" type="text/css">
     <title>Document</title>
   </head>
   <body>
+    <h1>Header h1</h1>
+    <h2>Header h2</h2>
+
+    <p>Lorem ipsum dolor sit amet.</p>
+    <p>Lorem ipsum dolor sit amet.</p>
+    <p>Lorem ipsum dolor sit amet.</p>
+    <p>Lorem ipsum dolor sit amet.</p>
+    <p>Lorem ipsum dolor sit amet.</p>
+
+    <!--
     <p>Lorem ipsum dolor sit amet.</p>
 
     <p style="color: blue; font-size: 30px; font-style: italic">
@@ -27,8 +38,6 @@
       <li>Milk</li>
     </ol>
 
-
-    <!--
    <ol>
       Content:
       <li><a href="#about"> About us</a></li>
