css правило для id

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <h1>Header h1</h1>
     <h2>Header h2</h2>
 
-    <p>Lorem ipsum dolor sit amet.</p>
+    <p id="green">Lorem ipsum dolor sit amet.</p>
     <p>Lorem ipsum dolor sit amet.</p>
     <p>Lorem ipsum dolor sit amet.</p>
     <p>Lorem ipsum dolor sit amet.</p>
