css class and id rules

--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
     <p id="green">Lorem ipsum dolor sit amet.</p>
     <p>Lorem ipsum dolor sit amet.</p>
     <p>Lorem ipsum dolor sit amet.</p>
-    <p>Lorem ipsum dolor sit amet.</p>
-    <p>Lorem ipsum dolor sit amet.</p>
+    <p class="text_mark">Lorem ipsum dolor sit amet.</p>
+    <p class="text_mark">Lorem ipsum dolor sit amet.</p>
 
     <!--
     <p>Lorem ipsum dolor sit amet.</p>
