css class for list

--- a/index.html
+++ b/index.html
@@ -17,7 +17,6 @@
     <p class="text_mark">Lorem ipsum dolor sit amet.</p>
     <p class="text_mark">Lorem ipsum dolor sit amet.</p>
 
-    <!--
     <p>Lorem ipsum dolor sit amet.</p>
 
     <p style="color: blue; font-size: 30px; font-style: italic">
@@ -26,7 +25,7 @@
     </p>
    
 
-    <ul style="list-style-type: '\1F60A';">
+    <ul class="smile_list">
       <li>Coffee</li>
       <li>Tea</li>
       <li>Milk</li>
@@ -38,14 +37,14 @@
       <li>Milk</li>
     </ol>
 
-   <ol>
+   <ul class="no_markers_list">
       Content:
       <li><a href="#about"> About us</a></li>
       <li><a href="#team">Team</a></li>
       <li><a href="#plans"> Plans</a></li>
       <li><a href="#contacts">Contacts</a></li>
       <li><a href="#address"> Adress</a></li>
-    </ol>
+   </ul>
 
     <h2 id="about">About us</h2>
     <p>
@@ -96,6 +95,6 @@
       provident ipsum repellat, ex modi illum id quidem molestiae reprehenderit
       illo!
     </p>
-    -->
+    
   </body>
 </html>
