--- a/index.html
+++ b/index.html
@@ -4,97 +4,21 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link href="Styles/style.css" rel="stylesheet" type="text/css">
+    <link href="Styles/style.css" rel="stylesheet" type="text/css" />
     <title>Document</title>
   </head>
   <body>
-    <h1>Header h1</h1>
-    <h2>Header h2</h2>
-
-    <p id="green">Lorem ipsum dolor sit amet.</p>
-    <p>Lorem ipsum dolor sit amet.</p>
-    <p>Lorem ipsum dolor sit amet.</p>
-    <p class="text_mark">Lorem ipsum dolor sit amet.</p>
-    <p class="text_mark">Lorem ipsum dolor sit amet.</p>
-
-    <p>Lorem ipsum dolor sit amet.</p>
-
-    <p style="color: blue; font-size: 30px; font-style: italic">
-      Lorem ipsum dolor sit amet consectetur adipisicing elit. Ex sapiente
-      provident dolores in ea assumenda totam odio omnis amet et.
+    <h1>head1</h1>
+    <h2>head2</h2>
+    <p>Lorem, ipsum dolor.</p>
+    <p class="text_mark">
+      Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iusto, cumque?
     </p>
-   
-
-    <ul class="smile_list">
-      <li>Coffee</li>
-      <li>Tea</li>
-      <li>Milk</li>
-    </ul>
-
-    <ol>
-      <li>Coffee</li>
-      <li>Tea</li>
-      <li>Milk</li>
-    </ol>
-
-   <ul class="no_markers_list">
-      Content:
-      <li><a href="#about"> About us</a></li>
-      <li><a href="#team">Team</a></li>
-      <li><a href="#plans"> Plans</a></li>
-      <li><a href="#contacts">Contacts</a></li>
-      <li><a href="#address"> Adress</a></li>
-   </ul>
-
-    <h2 id="about">About us</h2>
-    <p>
-      Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dignissimos
-      sequi quae aperiam est magni iusto, deserunt et libero maxime repellat
-      suscipit, laudantium, velit consequatur quia qui eaque saepe esse neque
-      alias cupiditate dolorem delectus quos. Consectetur, quos atque magnam,
-      provident ipsum repellat, ex modi illum id quidem molestiae reprehenderit
-      illo!
+    <p class="test_style_text">
+      Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quisquam
+      distinctio repudiandae porro atque tempore cupiditate asperiores! Animi
+      aperiam, perspiciatis delectus sapiente dolores necessitatibus facere
+      nostrum aspernatur tempore hic molestiae labore?
     </p>
-
-    <h2 id="team">Team</h2>
-    <p>
-      Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dignissimos
-      sequi quae aperiam est magni iusto, deserunt et libero maxime repellat
-      suscipit, laudantium, velit consequatur quia qui eaque saepe esse neque
-      alias cupiditate dolorem delectus quos. Consectetur, quos atque magnam,
-      provident ipsum repellat, ex modi illum id quidem molestiae reprehenderit
-      illo!
-    </p>
-
-    <h2 id="plans">Plans</h2>
-    <p>
-      Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dignissimos
-      sequi quae aperiam est magni iusto, deserunt et libero maxime repellat
-      suscipit, laudantium, velit consequatur quia qui eaque saepe esse neque
-      alias cupiditate dolorem delectus quos. Consectetur, quos atque magnam,
-      provident ipsum repellat, ex modi illum id quidem molestiae reprehenderit
-      illo!
-    </p>
-
-    <h2 id="contacts">Contacts</h2>
-    <p>
-      Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dignissimos
-      sequi quae aperiam est magni iusto, deserunt et libero maxime repellat
-      suscipit, laudantium, velit consequatur quia qui eaque saepe esse neque
-      alias cupiditate dolorem delectus quos. Consectetur, quos atque magnam,
-      provident ipsum repellat, ex modi illum id quidem molestiae reprehenderit
-      illo!
-    </p>
-
-    <h2 id="address">Address</h2>
-    <p>
-      Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dignissimos
-      sequi quae aperiam est magni iusto, deserunt et libero maxime repellat
-      suscipit, laudantium, velit consequatur quia qui eaque saepe esse neque
-      alias cupiditate dolorem delectus quos. Consectetur, quos atque magnam,
-      provident ipsum repellat, ex modi illum id quidem molestiae reprehenderit
-      illo!
-    </p>
-    
   </body>
 </html>
