how add google fonts

--- a/index.html
+++ b/index.html
@@ -4,13 +4,31 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!--Style css-->
     <link href="Styles/style.css" rel="stylesheet" type="text/css" />
+    <!--Google font-->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@200&family=Roboto&display=swap"
+      rel="stylesheet"
+    />
     <title>Document</title>
   </head>
   <body>
     <h1>head1</h1>
     <h2>head2</h2>
-    <p>Lorem, ipsum dolor.</p>
+    <p>
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto officia
+      repellat assumenda non voluptates, distinctio doloribus rem,
+      necessitatibus ratione fugiat natus dicta officiis provident sit libero
+      voluptatibus ipsa delectus reiciendis.
+    </p>
+    <p class="font_montserrat">
+      Lorem ipsum dolor, sit amet consectetur adipisicing elit. Suscipit
+      delectus quas consectetur quasi commodi facere error. Ab molestias, nisi
+      vel perspiciatis laborum molestiae sapiente voluptatibus!
+    </p>
     <p class="text_mark">
       Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iusto, cumque?
     </p>
