set of classes, how to mix them

--- a/index.html
+++ b/index.html
@@ -16,27 +16,11 @@
     <title>Document</title>
   </head>
   <body>
-    <h1>head1</h1>
-    <h2>head2</h2>
-    <p>
-      Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto officia
-      repellat assumenda non voluptates, distinctio doloribus rem,
-      necessitatibus ratione fugiat natus dicta officiis provident sit libero
-      voluptatibus ipsa delectus reiciendis.
-    </p>
-    <p class="font_montserrat">
-      Lorem ipsum dolor, sit amet consectetur adipisicing elit. Suscipit
-      delectus quas consectetur quasi commodi facere error. Ab molestias, nisi
-      vel perspiciatis laborum molestiae sapiente voluptatibus!
-    </p>
-    <p class="text_mark">
-      Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iusto, cumque?
-    </p>
-    <p class="test_style_text">
-      Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quisquam
-      distinctio repudiandae porro atque tempore cupiditate asperiores! Animi
-      aperiam, perspiciatis delectus sapiente dolores necessitatibus facere
-      nostrum aspernatur tempore hic molestiae labore?
-    </p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+    <p class="mark_p">Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+    <p class="mark_p">Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+    <p class="big_text">Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+    <p class="warning_text">Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+    <p class="mark_p big_text">Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
   </body>
 </html>
