how to put link inside picture

--- a/index.html
+++ b/index.html
@@ -16,11 +16,12 @@
     <title>Document</title>
   </head>
   <body>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
-    <p class="mark_p">Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
-    <p class="mark_p">Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
-    <p class="big_text">Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
-    <p class="warning_text">Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
-    <p class="mark_p big_text">Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+    <a href="https://fonts.google.com" target="_blank">
+      <img
+        class="img"
+        src="Images/Photo for link/photo-for-link.jpg"
+        alt="contrast-photo-for-link-to-fonts"
+      />
+    </a>
   </body>
 </html>
