attribute opacity css

--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
     <title>Document</title>
   </head>
   <body>
+    <p>Lorem ipsum dolor sit amet.</p>
+    <p class="opacity_text">Lorem ipsum dolor sit amet.</p>
     <a href="https://fonts.google.com" target="_blank">
       <img
         class="img"
