Div & Span intro

--- a/index.html
+++ b/index.html
@@ -16,14 +16,21 @@
     <title>Document</title>
   </head>
   <body>
-    <p>Lorem ipsum dolor sit amet.</p>
-    <p class="opacity_text">Lorem ipsum dolor sit amet.</p>
-    <a href="https://fonts.google.com" target="_blank">
-      <img
-        class="img"
-        src="Images/Photo for link/photo-for-link.jpg"
-        alt="contrast-photo-for-link-to-fonts"
-      />
-    </a>
+   <div>
+     I am div
+   </div>
+   <div> 
+    I am div 2
+   </div>
+
+   <br/>
+   <br/>
+
+   <span>
+    I am span
+   </span>
+   <span>
+    I am span 2
+   </span>
   </body>
 </html>
