--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!--Style css-->
+    <link href="Styles/reset.css" rel="stylesheet" type="text/css" />
     <link href="Styles/style.css" rel="stylesheet" type="text/css" />
+
     <!--Google font-->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -16,21 +18,13 @@
     <title>Document</title>
   </head>
   <body>
-   <div>
-     I am div
-   </div>
-   <div> 
-    I am div 2
-   </div>
+    <div>I am div</div>
+    <div>I am div 2</div>
 
-   <br/>
-   <br/>
+    <br />
+    <br />
 
-   <span>
-    I am span
-   </span>
-   <span>
-    I am span 2
-   </span>
+    <span> I am span </span>
+    <span> I am span 2 </span>
   </body>
 </html>
