solved 1px problem

--- a/index.html
+++ b/index.html
@@ -18,7 +18,27 @@
     <title>Document</title>
   </head>
   <body>
-    <div>I am div</div>
+    <div class="div1"><div>
+        <ul>
+          Drinks:
+          <li>tea</li>
+          <li>coffee</li>
+          <li>milk</li>
+        </ul>
+      </div>
+      <h2>Header</h2>
+      <p>Hello, div :)</p>
+      <p>Hello :)</p>
+      <ul>
+        <li>iteam1</li>
+        <li>iteam2</li>
+        <li>iteam3</li>
+      </ul>
+      <img
+        src="Images/Photo for link/photo-for-link.jpg"
+        alt="photo contrast"
+      />
+    </div>
     <div>I am div 2</div>
 
     <br />
