solved 1px problem (with notes)

--- a/index.html
+++ b/index.html
@@ -18,7 +18,19 @@
     <title>Document</title>
   </head>
   <body>
-    <div class="div1"><div>
+    <!--Проблема 1 px
+    - Выставить отрицательный сдвиг на 1 (позиционированием)
+    - Проблема границы, если убрать border, внешний и внутренний див 
+     становятся четко на друг друга, при условии что задана одинаковая ширина елементу
+    - Ставят на одну строку вложенный див с родителем
+    - Добавление формулы box sizing: border box (формула перерасчета эдемента)
+       по этой формуле какой размер назначили элементу, такой он и будет с учётом 
+        перерасчёта и добавления всех марджинов и паддингов и т.д.
+    - Чтобы исключить внешние пробелы, я могу внешнему диву (обёртке) 
+       поставить font-size: 0 , он уберет колапс между пробелами от
+         начала строки -->
+    <div class="div1">
+      <div>
         <ul>
           Drinks:
           <li>tea</li>
