--- a/index.html
+++ b/index.html
@@ -18,45 +18,8 @@
     <title>Document</title>
   </head>
   <body>
-    <!--Проблема 1 px
-    - Выставить отрицательный сдвиг на 1 (позиционированием)
-    - Проблема границы, если убрать border, внешний и внутренний див 
-     становятся четко на друг друга, при условии что задана одинаковая ширина елементу
-    - Ставят на одну строку вложенный див с родителем
-    - Добавление формулы box sizing: border box (формула перерасчета эдемента)
-       по этой формуле какой размер назначили элементу, такой он и будет с учётом 
-        перерасчёта и добавления всех марджинов и паддингов и т.д.
-    - Чтобы исключить внешние пробелы, я могу внешнему диву (обёртке) 
-       поставить font-size: 0 , он уберет колапс между пробелами от
-         начала строки -->
-    <div class="div1">
-      <div>
-        <ul>
-          Drinks:
-          <li>tea</li>
-          <li>coffee</li>
-          <li>milk</li>
-        </ul>
-      </div>
-      <h2>Header</h2>
-      <p>Hello, div :)</p>
-      <p>Hello :)</p>
-      <ul>
-        <li>iteam1</li>
-        <li>iteam2</li>
-        <li>iteam3</li>
-      </ul>
-      <img
-        src="Images/Photo for link/photo-for-link.jpg"
-        alt="photo contrast"
-      />
-    </div>
-    <div>I am div 2</div>
-
-    <br />
-    <br />
-
     <span> I am span </span>
-    <span> I am span 2 </span>
+    <!--SPAN - это строчный элемент и он не может в себя вкладывать
+     блочные элементы, только такие же строчные -->
   </body>
 </html>
