--- a/index.html
+++ b/index.html
@@ -18,8 +18,14 @@
     <title>Document</title>
   </head>
   <body>
-    <span> I am span </span>
-    <!--SPAN - это строчный элемент и он не может в себя вкладывать
-     блочные элементы, только такие же строчные -->
+    <div class="box1">1</div>
+    <div class="box2">2</div>
+    <div class="box3">3</div>
+    <div class="box4">
+      <div class="child"></div>
+      <div class="child"></div>
+      <div class="child"></div>
+    </div>
+    <div class="box5">5</div>
   </body>
 </html>
