--- a/index.html
+++ b/index.html
@@ -18,14 +18,6 @@
     <title>Document</title>
   </head>
   <body>
-    <div class="box1">1</div>
-    <div class="box2">2</div>
-    <div class="box3">3</div>
-    <div class="box4">
-      <div class="child"></div>
-      <div class="child"></div>
-      <div class="child"></div>
-    </div>
-    <div class="box5">5</div>
+    <div class="container_2"></div>
   </body>
 </html>
