work with image.size.background

--- a/index.html
+++ b/index.html
@@ -18,6 +18,12 @@
     <title>Document</title>
   </head>
   <body>
+    <div class="container_1">
+      <img
+      src="https://www.scotsman.com/webimg/b25lY21zOmRmYmExYzE4LTZhY2ItNDBkZS1iMTU1LWY4YTVlZWNmYTdkYzowOTcxZDZlOC00MDc1LTQzYzItOWEyOC00YjNlNzFiY2Y1YzI=.jpg?width=1200&enable=upscale"
+      alt="Image of dog"
+    </div>
+    
     <div class="container_2"></div>
   </body>
 </html>
