Задание по компановке.Работа с размещением изображения

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!--Style css-->
-    <link href="Styles/reset.css" rel="stylesheet" type="text/css" />
+   <!--<link href="Styles/reset.css" rel="stylesheet" type="text/css" /> --> 
     <link href="Styles/style.css" rel="stylesheet" type="text/css" />
 
     <!--Google font-->
@@ -18,12 +18,70 @@
     <title>Document</title>
   </head>
   <body>
-    <div class="container_1">
-      <img
-      src="https://www.scotsman.com/webimg/b25lY21zOmRmYmExYzE4LTZhY2ItNDBkZS1iMTU1LWY4YTVlZWNmYTdkYzowOTcxZDZlOC00MDc1LTQzYzItOWEyOC00YjNlNzFiY2Y1YzI=.jpg?width=1200&enable=upscale"
-      alt="Image of dog"
+    <div class="header">
+      <h1>Lorem, ipsum dolor.</h1>
+    </div>
+
+    <div class="under_header">
+      <h2>Lorem, ipsum dolor.</h2>
+    </div>
+
+    <div class="text_italic">
+      <p>
+        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Cumque magni
+        sapiente quo ipsum iste voluptatem impedit totam nisi consequuntur
+        numquam. Maiores tempore excepturi laudantium, sit numquam optio soluta
+        dolor placeat impedit! Consequatur dignissimos earum totam ut repellat,
+        enim facilis neque magni, tempora laborum laboriosam molestias, ipsam
+        minima iure quia error. Quo dicta suscipit sequi sit unde reprehenderit,
+        vitae nobis, nemo earum consectetur minima adipisci porro obcaecati
+        excepturi dolorem, dolores pariatur culpa ipsum natus illum inventore!
+        Dolor facilis beatae rem temporibus libero commodi, et laborum cumque
+        nihil, nulla perferendis ea unde in enim ut. Accusamus id, consequatur
+        sapiente nulla commodi reprehenderit.
+      </p>
+    </div>
+
+  <div class="img_plane">
+     <img 
+     src="Images/Фото по компановке/plane.jpg"
+     alt="Image of plane"
+     />
+  </div>
+   
+
+    <div class="text">
+      <p>
+        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Cumque magni
+        sapiente quo ipsum iste voluptatem impedit totam nisi consequuntur
+        numquam. Maiores tempore excepturi laudantium, sit numquam optio soluta
+        dolor placeat impedit! Consequatur dignissimos earum totam ut repellat,
+        enim facilis neque magni, tempora laborum laboriosam molestias, ipsam
+        minima iure quia error. Quo dicta suscipit sequi sit unde reprehenderit,
+        vitae nobis, nemo earum consectetur minima adipisci porro obcaecati
+        excepturi dolorem, dolores pariatur culpa ipsum natus illum inventore!
+        Dolor facilis beatae rem temporibus libero commodi, et laborum cumque
+        nihil, nulla perferendis ea unde in enim ut. Accusamus id, consequatur
+        sapiente nulla commodi reprehenderit.
+      </p>
     </div>
     
-    <div class="container_2"></div>
+    <div class="list">
+      <ul >
+        <li>Lorem ipsum dolor sit.</li>
+        <li>Lorem ipsum dolor sit amet.</li>
+        <li>Lorem, ipsum dolor.</li>
+        <li>Lorem ipsum dolor sit amet consectetur.</li>
+        <li>Lorem ipsum dolor sit.</li>
+        <li>Lorem ipsum dolor sit amet.</li>
+        <li>Lorem, ipsum dolor.</li>
+        <li>Lorem ipsum dolor sit.</li>
+        <li>Lorem, ipsum dolor.</li>
+        <li>Lorem ipsum dolor sit amet consectetur adipisicing.</li>
+        <li>Lorem, ipsum dolor.</li>
+        <li>Lorem ipsum dolor sit amet.</li>
+      </ol>
+
+    </div>
   </body>
 </html>
