Селекторы дочерних вложеных элементов.Доступ к элементам в стилях

--- a/index.html
+++ b/index.html
@@ -1,87 +1,57 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <!--Style css-->
-   <!--<link href="Styles/reset.css" rel="stylesheet" type="text/css" /> --> 
-    <link href="Styles/style.css" rel="stylesheet" type="text/css" />
+	<head>
+		<meta charset="UTF-8" />
+		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<!--Style css-->
+		<!--<link href="Styles/reset.css" rel="stylesheet" type="text/css" /> -->
+		<link href="Styles/style.css" rel="stylesheet" type="text/css" />
 
-    <!--Google font-->
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@200&family=Roboto&display=swap"
-      rel="stylesheet"
-    />
-    <title>Document</title>
-  </head>
-  <body>
-    <div class="header">
-      <h1>Lorem, ipsum dolor.</h1>
-    </div>
+		<!--Google font-->
+		<link rel="preconnect" href="https://fonts.googleapis.com" />
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+		<link
+			href="https://fonts.googleapis.com/css2?family=Montserrat:wght@200&family=Roboto&display=swap"
+			rel="stylesheet" />
+		<title>Document</title>
+	</head>
+	<body>
+		<div class="box style_box1"></div>
+		<div class="box style_box"></div>
+		<div class="box style_box"></div>
+		<div class="box style_box"></div>
+		<div class="box style_box"></div>
 
-    <div class="under_header">
-      <h2>Lorem, ipsum dolor.</h2>
-    </div>
+		<div class="image_spider">
+			<img src="Images/Small photo/spider.jpeg" />
+		</div>
 
-    <div class="text_italic">
-      <p>
-        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Cumque magni
-        sapiente quo ipsum iste voluptatem impedit totam nisi consequuntur
-        numquam. Maiores tempore excepturi laudantium, sit numquam optio soluta
-        dolor placeat impedit! Consequatur dignissimos earum totam ut repellat,
-        enim facilis neque magni, tempora laborum laboriosam molestias, ipsam
-        minima iure quia error. Quo dicta suscipit sequi sit unde reprehenderit,
-        vitae nobis, nemo earum consectetur minima adipisci porro obcaecati
-        excepturi dolorem, dolores pariatur culpa ipsum natus illum inventore!
-        Dolor facilis beatae rem temporibus libero commodi, et laborum cumque
-        nihil, nulla perferendis ea unde in enim ut. Accusamus id, consequatur
-        sapiente nulla commodi reprehenderit.
-      </p>
-    </div>
+		<img src="Images/Small photo/spider.jpeg" />
+		<img src="Images/Small photo/spider.jpeg" />
 
-  <div class="img_plane">
-     <img 
-     src="Images/Фото по компановке/plane.jpg"
-     alt="Image of plane"
-     />
-  </div>
-   
+		<div class="about_us">
+			<img src="#" />
+		</div>
 
-    <div class="text">
-      <p>
-        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Cumque magni
-        sapiente quo ipsum iste voluptatem impedit totam nisi consequuntur
-        numquam. Maiores tempore excepturi laudantium, sit numquam optio soluta
-        dolor placeat impedit! Consequatur dignissimos earum totam ut repellat,
-        enim facilis neque magni, tempora laborum laboriosam molestias, ipsam
-        minima iure quia error. Quo dicta suscipit sequi sit unde reprehenderit,
-        vitae nobis, nemo earum consectetur minima adipisci porro obcaecati
-        excepturi dolorem, dolores pariatur culpa ipsum natus illum inventore!
-        Dolor facilis beatae rem temporibus libero commodi, et laborum cumque
-        nihil, nulla perferendis ea unde in enim ut. Accusamus id, consequatur
-        sapiente nulla commodi reprehenderit.
-      </p>
-    </div>
-    
-    <div class="list">
-      <ul >
-        <li>Lorem ipsum dolor sit.</li>
-        <li>Lorem ipsum dolor sit amet.</li>
-        <li>Lorem, ipsum dolor.</li>
-        <li>Lorem ipsum dolor sit amet consectetur.</li>
-        <li>Lorem ipsum dolor sit.</li>
-        <li>Lorem ipsum dolor sit amet.</li>
-        <li>Lorem, ipsum dolor.</li>
-        <li>Lorem ipsum dolor sit.</li>
-        <li>Lorem, ipsum dolor.</li>
-        <li>Lorem ipsum dolor sit amet consectetur adipisicing.</li>
-        <li>Lorem, ipsum dolor.</li>
-        <li>Lorem ipsum dolor sit amet.</li>
-      </ol>
+		<p>
+			Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum architecto
+			fugiat suscipit quia iusto atque.
+		</p>
 
-    </div>
-  </body>
+		<div class="test_selectors">
+			<h2>header</h2>
+			<p>Hello, selectors</p>
+			<p>Lorem ipsum dolor sit amet.</p>
+			<img src="Images/Small photo/spider.jpeg" />
+			<div class="test">
+				<p>Lorem ipsum dolor sit amet.</p>
+				<img src="Images/Small photo/spider.jpeg" />
+			</div>
+			<h4>Header level 4 without class</h4>
+			<h4 class="test">Header level 4</h4>
+			<h5 class="test">Header level 4</h5>
+			<p class="test">Header level 4</p>
+		</div>
+	</body>
 </html>
