--- a/index.html
+++ b/index.html
@@ -17,41 +17,41 @@
 		<title>Document</title>
 	</head>
 	<body>
-		<div class="box style_box1"></div>
-		<div class="box style_box"></div>
-		<div class="box style_box"></div>
-		<div class="box style_box"></div>
-		<div class="box style_box"></div>
+		<div class="userCardContainer">
+			<div class="uredImage"></div>
 
-		<div class="image_spider">
-			<img src="Images/Small photo/spider.jpeg" />
-		</div>
-
-		<img src="Images/Small photo/spider.jpeg" />
-		<img src="Images/Small photo/spider.jpeg" />
-
-		<div class="about_us">
-			<img src="#" />
-		</div>
-
-		<p>
-			Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum architecto
-			fugiat suscipit quia iusto atque.
-		</p>
-
-		<div class="test_selectors">
-			<h2>header</h2>
-			<p>Hello, selectors</p>
-			<p>Lorem ipsum dolor sit amet.</p>
-			<img src="Images/Small photo/spider.jpeg" />
-			<div class="test">
-				<p>Lorem ipsum dolor sit amet.</p>
-				<img src="Images/Small photo/spider.jpeg" />
+			<div class="userInfo">
+				<p>Margot Robi</p>
+				<p>
+					Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+					Exercitationem, tempore nam quas quod quia odit mollitia fugit iste
+					iure! Ullam.
+				</p>
 			</div>
-			<h4>Header level 4 without class</h4>
-			<h4 class="test">Header level 4</h4>
-			<h5 class="test">Header level 4</h5>
-			<p class="test">Header level 4</p>
+
+			<div class="buttonFollow"></div>
+
+			<div class="sotialMedia">
+
+				<div class="posts">
+					<img src="" alt="" />
+					<p class="statTitle">Posts</p>
+					<p class="statValue">1000</p>
+				</div>
+
+				<div class="fav">
+					<img src="" alt="" />
+					<p class="statTitle">Favorites</p>
+					<p class="statValue">5000</p>
+				</div>
+
+				<div class="messages">
+					<img src="" alt="" />
+					<p class="statTitle">Messages</p>
+					<p class="statValue">3000</p>
+				</div>
+
+			</div>
 		</div>
 	</body>
 </html>
